data/derived/comb/progs/unify/prog3871.ml.out
Characters 111-112:
  else digits (n/10 + n mod 10) (mylength n/10 + n mod 10) list
                                          ^
Error: This expression has type int but an expression was expected of type
         'a list
